# dn-deobfuscator

./: .flake8  .gitignore  AUTOMATIC  AUTOMATIC.dn2prj  Makefile  README.md  manifest.json  pyproject.toml
data/: hidden-tears.dn2pst  synths.json  uncanny_valley.syx  wavetone.md
data/dn2_patches/: B001 BD NOISPUMP.dn2pst  B002 BD ACO.dn2pst  wavetone_base.dn2pst  wavetone_dec.dn2pst  wavetone_lev1.dn2pst  wavetone_lev2.dn2pst  wavetone_mod.dn2pst  wavetone_nlev.dn2pst  wavetone_ofs2.dn2pst  wavetone_tun1.dn2pst  wavetone_tun2.dn2pst  wavetone_void.dn2pst  wavetone_wav2.dn2pst
data/dn2_wavetone_patches/: wavetone_atk.dn2pst  wavetone_char.dn2pst  wavetone_drif.dn2pst  wavetone_hold.dn2pst  wavetone_ofs1.dn2pst  wavetone_pd1.dn2pst  wavetone_pd2.dn2pst  wavetone_rset.dn2pst  wavetone_tbl1.dn2pst  wavetone_tbl2.dn2pst  wavetone_tun2.dn2pst  wavetone_type.dn2pst  wavetone_wav1.dn2pst  wavetone_wdth.dn2pst
dn_deobfuscator/: app.py
doc/: all_patches.md
tests/: conftest.py
tests/data/: dn2_user_manual.md  project_sample.text
tests/data/extracted-hidden-tears/: HIDDEN TEARS  manifest.json
tests/functional/: test_digitone_preset_parser.py
tests/unit/: test_batch_extraction.py  test_project_files_extraction.py  test_sysex_extraction.py
