[project]
name = "dn-deobfuscator"
version = "0.1.0"
description = "Deobfuscator for Elektron DN2"
authors = [{ name = "zerubeus", email = "zerubeus@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dn = "dn_deobfuscator.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dn-deobfuscator"
version = "0.1.0"
packages = [{ include = "dn_deobfuscator" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
colorlog = "^6.9.0"
